[tool.poetry]
name = "math_problems"
version = "0.1.0"
description = ""
authors = ["Abbas <abbazs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
ipykernel = "^6.5.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
